# terminal-sherpa

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  coverage.xml  main.py  mutation_testing.toml  pyproject.toml
.github/workflows/: lint.yml  main.yml  mutation-testing.yml  publish.yml
ask/: config.py
ask/providers/: __init__.py  anthropic.py  gemini.py  grok.py  ollama.py  openai.py
docs/: mutation-testing.md
providers/: __init__.py  anthropic.py  base.py  openai.py
scripts/: run_mutation_testing.sh
test/: conftest.py  test_anthropic.py  test_config.py  test_gemini.py  test_grok.py  test_main.py  test_ollama.py  test_openai.py
test/test_resources/: complete_config.toml  invalid_config.toml  minimal_config.toml  valid_config.toml
