[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-sherpa"
version = "0.1.0"
description = "AI-powered bash command generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.7.0",
    "black>=25.1.0",
    "cosmic-ray>=8.3.4",
    "loguru>=0.7.0",
    "mutatest>=3.1.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.3",
    "setuptools>=80.9.0",
    "taskipy>=1.14.1",
    "toml>=0.10.0",
]

[project.scripts]
ask = "ask.main:main"

[tool.taskipy.tasks]
test = "pytest test/ --cov=ask --cov-report=html --cov-report=term"
mutation-test = "scripts/run_mutation_testing.sh"
setup = "pre-commit install"
install = "uv sync"

[tool.setuptools.packages.find]
include = ["*"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    build
    install
    log
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [ "D100", "D107", "D104", "COM812" ]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8 quotes
    "Q",
    # flake8 commas
    "COM",
    # flake8 comprehensions
    "C4",
    # pydocstyle, uncomment
    "D",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["D102", "D103"]

[tool.coverage.run]
source = ["ask"]
