[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-sherpa"
version = "0.4.0"
description = "AI-powered bash command generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.7.0",
    "google-genai>=1.26.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "setuptools>=80.9.0",
    "toml>=0.10.0",
    "xai-sdk",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries",
]


[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "black>=25.1.0",
    "ruff>=0.12.3",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "cosmic-ray>=8.3.4",
    "mutatest>=3.1.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/lcford2/terminal-sherpa"
Issues = "https://github.com/lcford2/terminal-sherpa/issues"

[project.scripts]
ask = "ask.main:main"

[tool.taskipy.tasks]
test = "pytest test/ --cov=ask --cov-report=html --cov-report=term"
mutation-test = "scripts/run_mutation_testing.sh"
setup = "pre-commit install"
install = "uv sync"

[tool.setuptools.packages.find]
include = ["*"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    build
    install
    log
)/
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [ "D100", "D107", "D104", "COM812" ]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8 quotes
    "Q",
    # flake8 commas
    "COM",
    # flake8 comprehensions
    "C4",
    # pydocstyle, uncomment
    "D",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["D102", "D103"]

[tool.coverage.run]
source = ["ask"]
